remove unnecessary modules

--- a/multimedia/mjpg-streamer/Makefile
+++ b/multimedia/mjpg-streamer/Makefile
@@ -52,7 +52,7 @@ endef
 CAMBOZOLA:=cambozola-0.936.tar.gz
 
 define Download/cambozola
-  URL:=http://www.andywilcock.com/code/cambozola
+  URL:=http://mirror2.openwrt.org/sources
   FILE:=$(CAMBOZOLA)
   MD5SUM:=35c45188aa9635aef2b745c35c311396
 endef
